--- a/client/src/components/pages/Account.css
+++ b/client/src/components/pages/Account.css
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500;600;700&display=swap");
-@import url('https://fonts.googleapis.com/css2?family=Major+Mono+Display&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Monoton&display=swap');
 
 .Profile {
     margin: 10px 25px;
@@ -66,8 +66,7 @@
 }
 
 .UserNameAndEdit p {
-    font-family: 'Major Mono Display', monospace;
-    text-transform: uppercase;
+    font-family: 'Monoton', monospace;
 }
 .UserNameAndEdit button {
     font-size: 15px;
