--- a/client/src/components/pages/Account.css
+++ b/client/src/components/pages/Account.css
@@ -74,6 +74,7 @@
 
 .Settings { 
     min-width: 200px;
+    background-color: rgba(0, 0, 0, 0.4);
 }
 .Settings button{
     font-size: 20px;
@@ -81,6 +82,42 @@
     color:white;
     background-color: transparent;
     margin: 7px;
+}
+
+.Overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.6); /* Semi-transparent dark overlay */
+    z-index: 999; /* Ensure it’s behind the popup */
+}
+
+.FollowPopUp {
+    position: fixed; /* Fixed to the viewport */
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%); /* Center the popup */
+    z-index: 1000; /* Overlay above the background */
+    background-color: rgba(0, 0, 0, 0.9); /* Popup background */
+    padding: 20px;
+    border-radius: 10px;
+    color: white;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.25);
+    width: 90%;
+    max-width: 500px;
+    max-height: 80%;
+    overflow-y: auto;
+}
+
+.editing {
+    border: 1px solid #37ABFF;
+    background-color: rgba(0, 0, 0, 0.25);
+    color: white;
+    font-family: 'Raleway';
+    padding:10px;
+    border-radius: 34778px;
 }
 
 .Settings button:hover {
