--- a/client/src/components/pages/Feed.css
+++ b/client/src/components/pages/Feed.css
@@ -66,7 +66,7 @@
     border: 1.043px solid #37ABFF;
     border-radius: 34778px;
     backdrop-filter: blur(1.7389342784881592px);
-    background-color: transparent;
+    background-color: rgba(0, 0, 0, 0.4);
     color:white;
     font-family: "Raleway", sans-serif;
     text-align: center;
