fixed post format

--- a/client/src/components/modules/NavBar.css
+++ b/client/src/components/modules/NavBar.css
@@ -3,22 +3,24 @@ nav {
   display: flex;
   align-items:center;
   justify-content: center;
+  padding: 0 20px ;
+}
+
+.linky {
+  margin: 0 15px;
 }
 
 .login {
-  width: 50%;
-  height:100%;
-  display:flex;
-  justify-content: left;
-  padding: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-
 .login button {
   background-color:transparent;
   color:white;
   border:none;
   font-family: 'Raleway';
-  font-size: 25px;
+  font-size: 15px;
   
 }
 .login button:hover {
@@ -29,46 +31,63 @@ a:hover {
   color: #37ABFF;
 }
 
-.create:hover {
+.FractalFlow:hover {
   transform: scale(1.1);
 }
-.navigation {
-  display: flex;
-  width: 150%;
-  height:100%;
+
+.rightContainer {
+  width:100%;
+  display:flex;
   justify-content: right;
 }
+.navigation {
+  width: 100%;
+  display:flex;
+  align-items: center;
+}
+
 ul {
     list-style-type: none; /* Removes bullets */
     display: flex; /* Horizontally aligns the items */
-    padding: 0;
-    margin: 0;
-    justify-content: flex-end; /*moves to left */
     align-items: center; /*vertical center*/
-    flex-wrap: wrap; /* Allows wrapping to the next line */
-  }
+    padding: 0px;
+}
 
+.rightContainer li {
+  margin: 0 15px;
+}
 li, a {
-    margin: 10px 20px; /* Adds spacing between items */
     font-family: "Raleway", sans-serif;
     color: white;
-    font-size: 25px;
+    font-size: 23px;
     text-decoration: none;
+    align-items: center;
   }
 
-img {
-    width: 200px; /* Adjust width */
-    height: auto; /* Maintain aspect ratio */
+
+.FractalFlow {
+  transition: transform 0.3s ease;
 }
 
 .create {
-    font-family: "Aboreto", sans-serif;
-    background-image: url(../imgs/NavBarBackground.png);
-    margin-top: 23px;
-    margin-bottom: 0px;
-    transition: transform 0.3s ease;
+  background: url('../imgs/CreateBackground.png');
+  border: 1px solid white;
+  padding: 7px;
+  border-radius: 10px;
 }
 
+.create:hover {
+  background-color:#37ABFF;
+}
+
+.content {
+  display: flex;
+  align-items: center;
+}
+.FractalFlow img {
+  height:35px;
+  width:auto;
+}
 @media (max-width: 700px) {
   ul, nav, .login, .navigation {
       justify-content: center; /* Center horizontally */
