--- a/client/src/components/modules/Follow.css
+++ b/client/src/components/modules/Follow.css
@@ -1,18 +1,21 @@
 .Follow {
-    background-image: url('../imgs/Follow.png');
+    background-image: url('../imgs/FollowBackground.png');
     background-size: cover;
     background-position: center; /* Centers the image */
     background-repeat: no-repeat; /* Prevents the image from repeating */
     width: 100%; /* Adjust the width */
-    height: 100vh; /* Adjust the height */
-    box-shadow: 0px 4px 4px 10px rgba(0, 0, 0, 0.25);
-    filter: brightness(70%);
     z-index: 0;
-    
+    border-radius: 20px;
 }
 
 .names {
     position: relative;
     z-index: 1;
     color: white;
+}
+
+.names {
+    display: flex;
+    justify-content: center;
+    padding: 10px;
 }
