--- a/client/src/components/pages/Account.css
+++ b/client/src/components/pages/Account.css
@@ -66,7 +66,8 @@
     margin-left: 25px;
     padding:10px;
     height: 255px;
-
+    border-radius: 20px;
+    background-color: rgba(0, 0, 0, 0.4);
 }
 
 .UserNameAndEdit p {
@@ -79,7 +80,9 @@
 .Settings { 
     min-width: 200px;
     background-color: rgba(0, 0, 0, 0.4);
+    border-radius: 20px;
 }
+
 .Settings button{
     font-size: 20px;
     font-family: 'Raleway';
@@ -149,8 +152,31 @@
     color:#37ABFF;
 }
 
-.textarea {
-    height:fit-content ;
+.UserSelectedFractals {
+    display: flex;
+    justify-content: center;
+}
+
+.FractalSide {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    justify-content: flex-start;
+}
+.custom-bio {
+    width: 100%; /* Adjust width as needed */
+    min-height: 100px; /* Minimum height */
+    max-height: 255px; /* Maximum height, if desired */
+    resize: none; /* Prevent manual resizing */
+    overflow: hidden; /* Hide scrollbars */
+    padding: 10px; /* Add some padding for better appearance */
+    font-size: 16px; /* Adjust font size */
+    line-height: 2; /* Better readability */
+    box-sizing: border-box; /* Ensure padding is included in width/height */
+  }
+
+.bio {
+    line-height: 2;
 }
 @media (max-width: 700px) {
     .TopSection {
