--- a/client/src/components/pages/Feed.css
+++ b/client/src/components/pages/Feed.css
@@ -19,8 +19,30 @@
     width: 50px;  /* Set the overall button width */
 }
 
+.SearchContainer {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    justify-content: flex-end;
+    width:100%
+}
+
+.SearchBox {
+    display: flex;
+    flex-direction: row;
+
+}
 .SearchButton {
-    color:white
+    color:white;
+    margin:5px;
+}
+.FindUserButton {
+    border: 1px solid #37ABFF;
+    background-color: rgba(0, 0, 0, 0.25);
+    color: white;
+    font-family: 'Raleway';
+    padding:7px;
+    border-radius: 34778px;
 }
 .MinusButton path {
     stroke-width: 1; /* Set the line thickness (1px thin) */
@@ -45,7 +67,9 @@
 }
 
 .Filter {
+    display: flex;
     justify-content: left;
+    align-items: center;
 }
 
 .CustomDisplayButton {
@@ -54,6 +78,7 @@
   
 .CustomDisplayButton.visible {
     display: flex; /* Show when visible */
+    align-items: center;
 }
 
 .MinusButton {
@@ -72,6 +97,15 @@
     text-align: center;
     font-size: 17px;
     text-transform: uppercase;
+}
+
+.DisplayButton {
+    height: 50px;
+    padding: 0;
+}
+
+.DisplayButton p:hover {
+    cursor: default;
 }
 
 .postGallery1, .postGallery2 {
@@ -121,6 +155,8 @@ p:hover {
     display: flex;
     justify-content: right;
 }
+
+
 
 @media (max-width: 700px) {
     .Buttons, .CustomDisplay {
